Add potted dyed cacti

--- a/src/main/resources/assets/colorfulcacti/lang/en_us.json
+++ b/src/main/resources/assets/colorfulcacti/lang/en_us.json
@@ -11,6 +11,22 @@
 	"block.colorfulcacti.magenta_cactus": "Magenta Cactus",
 	"block.colorfulcacti.orange_cactus": "Orange Cactus",
 	"block.colorfulcacti.pink_cactus": "Pink Cactus",
+	"block.colorfulcacti.potted_black_cactus": "Potted Black Cactus",
+	"block.colorfulcacti.potted_blue_cactus": "Potted Blue Cactus",
+	"block.colorfulcacti.potted_brown_cactus": "Potted Brown Cactus",
+	"block.colorfulcacti.potted_cyan_cactus": "Potted Cyan Cactus",
+	"block.colorfulcacti.potted_gray_cactus": "Potted Gray Cactus",
+	"block.colorfulcacti.potted_green_cactus": "Potted Green Cactus",
+	"block.colorfulcacti.potted_light_blue_cactus": "Potted Light Blue Cactus",
+	"block.colorfulcacti.potted_light_gray_cactus": "Potted Light Gray Cactus",
+	"block.colorfulcacti.potted_lime_cactus": "Potted Lime Cactus",
+	"block.colorfulcacti.potted_magenta_cactus": "Potted Magenta Cactus",
+	"block.colorfulcacti.potted_orange_cactus": "Potted Orange Cactus",
+	"block.colorfulcacti.potted_pink_cactus": "Potted Pink Cactus",
+	"block.colorfulcacti.potted_purple_cactus": "Potted Purple Cactus",
+	"block.colorfulcacti.potted_red_cactus": "Potted Red Cactus",
+	"block.colorfulcacti.potted_white_cactus": "Potted White Cactus",
+	"block.colorfulcacti.potted_yellow_cactus": "Potted Yellow Cactus",
 	"block.colorfulcacti.purple_cactus": "Purple Cactus",
 	"block.colorfulcacti.red_cactus": "Red Cactus",
 	"block.colorfulcacti.white_cactus": "White Cactus",
